# SANGI

./: .gitignore  CLAUDE.md  HARDWARE_WIRING.md  MODULE_7_WEB_SERVER_PLAN.md  NEW_EMOTION_HOWTO.md  Notes.md  PERSONALITY_EXPANSION_PLAN.md  PHASE1_IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RULES.md  Readme.md  SANGI.code-workspace  SANGI_V1_IMPLEMENTATION.md  VERSION  WIRELESS_LOGGING_SUMMARY.md  platformio.ini  start.sh  v1.md  vercel.json
.github/: copilot-instructions.md  copilot.md
PC-setup/: .gitignore  QUICK_START.sh  config.json.template  install_dependencies.sh  sangi-pc-monitor.service.template  sangi-workspace-monitor.service  test_modules.py  test_notifications.py  workspace_monitor.py  workspace_monitor_modular.py
docs/: ARCHITECTURE.md  CHANGELOG.md  Code_Reference.md  LICENSE  MQTT_DEPLOYMENT.md  Notes.md  (+4 more)
pi-setup/: README.md  config.json.template  notification_service.py  pyproject.toml  requirements.txt  sangi-notification-monitor@.service  setup.sh  test_github_stats.py
pi-setup/lib/: __init__.py  discord_monitor.py  github_monitor.py  github_stats.py  mqtt_publisher.py  notification_monitor.py  random_stats_trigger.py
pi-setup/sangi_notify/: __init__.py  __main__.py  config.py  service.py
pi-setup/sangi_notify/monitors/: __init__.py  base.py  dbus_notify.py  discord.py  github_api.py  github_notifications.py  github_stats.py  random_trigger.py
pi-setup/sangi_notify/mqtt/: __init__.py  client.py  topics.py
pi-setup/sangi_notify/util/: __init__.py  logging.py
pi-setup/tests/: conftest.py  test_service.py
(+80 files in other folders)
